--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,5 @@
-.App {
-  text-align: center;
-}
-
-.App__logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 160px;
+.logo {
+  animation: logo-spin infinite 20s linear;
 }
 
 .App__header {
@@ -13,15 +8,7 @@
   color: white;
 }
 
-.App__title {
-  font-size: 1.5em;
-}
-
-.App__about {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
+@keyframes logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
